# simplehttp

./: .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config.toml
.circleci/: config.yml
src/: lib.rs  simplehttp.rs  simplehttp_esp32.rs  simplehttp_fastly.rs  simplehttp_reqwest.rs  simplehttp_spin.rs
