[package]
name = "simplehttp"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
description = "Simple (and very immature) sync http client. Intended to have multiple implementations abstracting away API differences between platforms"
authors = ["Frank Lyaruu <flyaruu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
reqwest = { version = "0.11", features = ["json","blocking"], optional=true}

# Esp32:
esp-idf-svc = { version = "0.46.0", features = ["experimental"], optional = true }
esp-idf-hal = { version="0.41.1", optional=true}
esp-idf-sys = { version = "0.33.1", optional=true }
embedded-svc = { version = "0.25.0", optional=true }
embedded-hal = { version = "1.0.0-alpha.10", optional=true  }


# Spin (WASM)
# Useful crate to handle errors.
anyhow = { version = "1", optional = true }
# Crate to simplify working with bytes.
bytes = {version="1", optional=true}
# General-purpose crate with common HTTP types.
http = {version="0.2", optional=true}
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1", optional=true }
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
# Don't think I need this?
# wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba", optional=true }
log = "0.4.18"
thiserror = "1.0.44"

[patch.crates-io]
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }

[features]
reqwest = ["dep:reqwest"]
esp32 = ["dep:esp-idf-svc", "dep:esp-idf-hal", "dep:esp-idf-sys", "dep:embedded-svc", "dep:embedded-hal"]
spin = ["dep:anyhow","dep:bytes","dep:http","dep:spin-sdk"]

[unstable]
build-std = ["std", "panic_abort"]
build-std-features = ["panic_immediate_abort"]
